# AMLA

./: README.md
Week_2/my_krml_25078371/: CONTRIBUTING.md  README.md  pyproject.toml
Week_2/my_krml_25078371/docs/: Makefile
Week_2/my_krml_25078371/src/my_krml_25078371/: __init__.py
Week_2/my_krml_25078371/tests/: test_my_krml_25078371.py
Week_2/my_krml_25078371/tests/data/: test_sets.py
Week_3/: pyproject.toml
Week_3/week_3_lab/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Week_3/week_3_lab/docs/: Makefile  conf.py  example.ipynb  make.bat
Week_3/week_3_lab/notebooks/: baseline.ipynb
Week_3/week_3_lab/src/week_3_lab/: __init__.py
Week_3/week_3_lab/tests/: test_week_3_lab.py
Week_3_v2/lab3_api/: pyproject.toml  sgd_pipeline.joblib
Week_3_v2/lab3_api/app/: main.py
Week_3_v2/w3_labs/: LICENSE  Makefile  README.md  pyproject.toml
Week_3_v2/w3_labs/notebooks/: 2_pipelines.ipynb
Week_3_v2/w3_labs/w3_labs/: __init__.py  dataset.py  features.py  plots.py
Week_3_v2/w3_labs/w3_labs/modeling/: predict.py  train.py
Week_4/: pyproject.toml
Week_4/adv_mla_lab_4/: Makefile  pyproject.toml
Week_4/adv_mla_lab_4/adv_mla_lab_4/: dataset.py  features.py  plots.py
Week_4/adv_mla_lab_4/adv_mla_lab_4/modeling/: predict.py  train.py
Week_4/adv_mla_lab_4/docs/: mkdocs.yml
Week_4/adv_mla_lab_4/models/: ada_reg.joblib  adaboost_default.joblib
Week_4/adv_mla_lab_4/notebooks/: 1_baseline.ipynb  2_adaboost.ipynb
Week_4/lab4_app/: app.py  requirements.txt
my_krml_25078371/: CHANGELOG.md  LICENSE  Lab2_ex02.ipynb  pyproject.toml
my_krml_25078371/docs/: conf.py  example.ipynb  make.bat
my_krml_25078371/src/data/: sets.py
my_krml_25078371/src/my_krml_25078371/data/: sets.py
my_krml_25078371/src/my_krml_25078371/models/: performance.py
