[tool.poetry]
name = "week_3_lab"
version = "0.1.0"
description = "A package for doing great things!"
authors = ["Thang Doan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
