[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "w3_labs"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Thang Doan" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab (==4.2.3)",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas (==2.2.2)",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn (==1.5.1)",
    "tqdm",
    "typer",
]
requires-python = "==3.11.4"


[tool.ruff]
line-length = 99
src = ["w3_labs"]
include = ["pyproject.toml", "w3_labs/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["w3_labs"]
force-sort-within-sections = true

